# Image_Whitebalance_ML

./: .gitignore  COLAB_README.md  COLAB_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  POETRY_INTEGRATION_SUMMARY.md  README.md  SETUP_COMPLETE.md  USER_GUIDE.md  aftershoot_colab_setup.ipynb  colab_ready.ipynb  colab_setup.py  data_preprocessing.py  data_setup_colab.py  debug_dataset.py  main.py  main_colab.py  poetry_colab_setup.py  pyproject.toml  requirements.txt  test_colab_model.py  test_data_split.py  test_model.py  test_setup.py  train_clean.py  train_full_data.py  train_improved.py  view_eda.py
configs/: base_config.py  model_configs.py
data/Test/: .gitkeep
data/Train/: .gitkeep  sliders.csv  sliders_filtered.csv
data/Validation/: .gitkeep  sliders_inputs.csv
notebooks/: 01_eda.ipynb
src/data/: dataset.py  transforms.py
src/inference/: __init__.py  predict.py
src/models/: cnn_backbone.py  multimodal.py
src/training/: __init__.py  losses.py  metrics.py  trainer.py
src/utils/: visualization.py
